testsuite/tests/interpreter_errors/selector_kind_error/test.out
script.lkql:2:12: error: Cannot use values of kind Bool in a selector
2 |     | * => true
  |            ^^^^

